# med-checker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  pyproject.toml
app/: streamlit_app.py
data/patients/: patient_001.json  patient_profiles.json
scripts/: check_preprocessing.py  debug_extraction.py  debug_ocr.py  debug_ocr2.py  test_ocr_only.py  test_pipeline.py
src/: config.py  graph.py  state.py
src/adapters/: ocr_engine.py  openfda_client.py  rxnorm_client.py
src/core/: llm_factory.py
src/nodes/: agent_node.py  audit_node.py  drug_info_node.py  ocr_node.py  preprocessing.py  profile_node.py  reasoning_node.py
src/schemas/: __init__.py  drug_data.py  extraction.py  patient.py  state_sections.py  verdict.py
src/tools/: __init__.py  drug_safety_tool.py  openfda_tool.py  rxnorm_tool.py
tests/: test_drug_safety_tool.py  test_logical_flow.py  test_nodes.py  test_ocr_node.py  test_openfda.py  test_phase0_ocr.py  test_rxnorm_client.py  test_tools.py
