[project]
name = "med-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "opencv-python>=5.0.0.93",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
