[project]
name = "med-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "opencv-python==4.6.0.66",
    "paddleocr==2.7.3",
    "paddlepaddle==2.6.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "pillow>=9.0.0",
    "setuptools>=83.0.0",
    "numpy<2.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
