[project]
name = "med-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "opencv-python>=4.6.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "pillow>=9.0.0",
    "setuptools>=83.0.0",
    "numpy<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
